--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
+
+
+body {
+  font-family: 'Roboto', sans-serif;
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap') 
+}
+
+
 ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
   }
 
 body{
@@ -9,22 +19,74 @@ body{
     flex-direction: column;
 }
 
-.header{
+.header-and-main{
     display: flex;
     justify-content: space-around;
-    align-items: center;
     background-color: #1F2937;
+    padding-bottom: 90px;
+}
+
+.left-side{
+    display: flex;
+    flex-direction: column;
+    margin-left: 120px;
+}
+
+.header-logo{
+    font-size: 24px;
+    color: #F9FAF8;
+    margin-bottom: 90px;
+    padding-top: 10px;
+    font-weight: bold;
+}
+
+.main-title{
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+    width: 400px;
+    margin: 0;
+}
+
+.text-box{
+    font-size: 18px;
+    color: #E5E7EB;
+    width: 500px;
+}
+
+.button{
+    background-color: #3882F6;
     color: white;
+    height: 30px;
+    width: 100px;
+    border: 0;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.right-side{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-right: 120px;
 }
 
 .links{
     display: flex;
-    gap: 20px;
-    font-size: 18px;
+    justify-content: flex-end;
+    gap: 15px;
+    padding-top: 10px;
+    margin-bottom: 90px;
+    font-size: 14px;
     color: #E5E7EB;
 }
 
-.h-logo{
-    font-size: 24px;
-    color: #F9FAF8;
+.box{
+    width: 500px;
+    height: 190px;
+    background-color: rgb(178, 172, 172);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #E5E7EB;
 }
