--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body{
     color: #E5E7EB;
 }
 
-.box{
+.main-box{
     width: 500px;
     height: 190px;
     background-color: rgb(178, 172, 172);
@@ -89,4 +89,44 @@ body{
     justify-content: center;
     align-items: center;
     color: #E5E7EB;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 90px;
+}
+
+.info-title{
+    padding: 50px;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.boxes{
+    display: flex;
+    gap: 70px;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    text-align: center; 
+}
+
+.box{
+    width: 150px;
+    height: 150px;
+    border: solid #3882F6 3px;
+    background-color: white;
+    text-align: center;
+    border-radius: 15px;
+}
+
+.box-text{
+    width: 150px;
+    margin-top: 10px;
+    color: rgb(178, 172, 172);
 }
